menu button color fix on mobile

--- a/src/components/Intro/index.sass
+++ b/src/components/Intro/index.sass
@@ -2,7 +2,7 @@
   width: 100%
   height: 100%
   position: relative
-  z-index: 10
+  z-index: 200
 
 .stripContainer
   width: 100%
